# xanthidae

./: .gitignore  Cargo.toml  README.adoc  build.rs  features.adoc
.github/workflows/: rust.yml
src/: clipboard.rs  config.rs  export.rs  flyway.rs  lib.rs  plsqldev_api.rs  prelude.rs  string_utils.rs  windows_api.rs
src/test_data/: special-chars-input.sql
