[package]
name = "xanthidae"
version = "1.0.1"
authors = [
    "Marco Erdmann",
    "Anne von Raven",
    "Frank Schmitt"
]
publish = false
edition = "2021"
build = "build.rs"

[lib]
name = "xanthidae"
crate-type = ["cdylib"]

[package.metadata.winres]
OriginalFilename = "xanthidae.dll"
LegalCopyright = "This software is released under the Apache 2.0 license"
FileDescription = "PL/SQL-Developer Plugin written in the Rust programming language"
ProductName = "Xanthidae"
ProductVersion = "1.0"

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "commdlg", "shobjidl", "shobjidl_core", "combaseapi", "objbase", "winbase"] }
scopeguard = "1.1.0"
lazy_static = "1.4.0"
log = "0.4.14"
simplelog = "0.10.0"
chrono = "0.4.19"
regex = "1.4.5"
indoc = "1.0.3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[build-dependencies]
vergen = "7.1.0"
