[package]
name = "xanthidae"
version = "1.0.2"
authors = [
    "Marco Erdmann",
    "Anne von Raven",
    "Frank Schmitt"
]
publish = false
edition = "2021"
build = "build.rs"

[lib]
name = "xanthidae"
crate-type = ["cdylib"]

[package.metadata.winres]
OriginalFilename = "xanthidae.dll"
LegalCopyright = "This software is released under the Apache 2.0 license"
FileDescription = "PL/SQL-Developer Plugin written in the Rust programming language"
ProductName = "Xanthidae"
ProductVersion = "1.0"

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "commdlg", "shobjidl", "shobjidl_core", "combaseapi", "objbase", "winbase", "winerror"] }
scopeguard = "1.2.0"
lazy_static = "1.5.0"
log = "0.4.26"
simplelog = "0.12.2"
chrono = "0.4.39"
regex = "1.11.1"
indoc = "2.0.5"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[build-dependencies]
vergen = "7.1.0"
